--- a/.atomist.yml
+++ b/.atomist.yml
@@ -15,3 +15,19 @@ generator:
     - "description": "bla"
     - "version": "0.1.0"
 
+---
+kind: "operation"
+client: "atomist-bot"
+editor:
+  name: "AddTypeScriptGenerator"
+  group: "atomist-rugs"
+  artifact: "rug-editors"
+  version: "0.25.0"
+  origin:
+    repo: "git@github.com:atomist-rugs/rug-editors.git"
+    branch: "master"
+    sha: "7557a1b"
+  parameters:
+    - "generatorName": "TEst"
+    - "description": "Test"
+
